<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/interface_cat_preference">

        <SwitchPreference
            android:defaultValue="false"
            android:key="text_size"
            android:title="@string/enable_bigger_text" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="icon_size"
            android:title="@string/enable_bigger_icons" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="rotate_vertical_image"
            android:title="@string/rotate_vertical_image" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/other_cat_preference">
        <Preference
            android:key="version"
            android:title="@string/version" />
    </PreferenceCategory>

</PreferenceScreen>